# Epilepsy-Content-Detector

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PRODUCT_READINESS.md  SAFETY.md
epilepsy_guard/: __init__.py  __main__.py  app.py  capture_backends.py  config.py  detector.py  logging_utils.py  models.py  screen_capture.py  shield.py  single_instance.py  synthetic.py  win32_screen.py
tests/: test_app_routing.py  test_cli.py  test_config.py  test_detector.py  test_logging_utils.py  test_screen_capture.py  test_single_instance.py
